fixed overflows

--- a/src/base.css
+++ b/src/base.css
@@ -11,8 +11,7 @@
 body {
   margin: 0;
   padding: 0;
-  overflow: hidden;
-  max-width: 100%;
+  background-color: red;
 }
 
 h1,
